# drone_avoidance_rl

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.unified  LICENSE  Makefile  README.ja.md  README.md  README_GPU.md  README_ja.md  check_package_versions.sh  delete_logs.py  docker-compose.gpu.yml  docker-compose.manual_control.yaml  docker-compose.yml  mypy.ini  package.json  pyproject.toml  release.config.js  requirements-docs.txt  requirements-gpu.txt  requirements.txt
.devcontainer/: devcontainer.json  tasks.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yaml  ci.yml  codeql-analysis.yml  gpu-ci-fallback.yml  gpu-ci.yml  integration-ci.yml  integration.yml  manual-ci.yml  manual_control.yml  optimized-ci.yml  release.yml  rl-ci.yml
config/: optimized_training.yaml  ray_config.yaml  rl_config.yaml  sim_params.yaml  sim_params_optimized.yaml
custom_airframes/: 4001_custom_drone  4500_my_drone.json  rcS_custom
custom_model/: README.md
custom_model/drone_model/: model.config  model.sdf
custom_model/manual_control_drone/: model.config  model.sdf
docker/: Dockerfile.base  Dockerfile.base-gpu  Dockerfile.base-gpu-optimized  Dockerfile.bridge  Dockerfile.manual_control  Dockerfile.msgs  Dockerfile.rl-agent-gpu  Dockerfile.sim  Dockerfile.unified  Dockerfile.web_viz  docker-compose.yml  entrypoint-bridge.sh  entrypoint-sim.sh  entrypoint-unified.sh
docker/px4-bridge/: Dockerfile.bridge  Dockerfile.msgs  entrypoint-bridge.sh
docker/px4-ros2-base/: Dockerfile.base
docker/px4-simulator/: Dockerfile.px4_sitl  Dockerfile.simulator  entrypoint-px4-sitl.sh  entrypoint-simulator.sh
docker/rl-agent/: Dockerfile  Dockerfile.agent  entrypoint-rl-agent-gpu.sh  entrypoint-rl-agent.sh
docker/rl-agent-cpu/: Dockerfile
docs/: README.md  architecture.md  comprehensive_testing_strategy.md  devflow.md  faq.md  gpu_setup.md  index.md  mkdocs.yml  self-hosted-runner-setup.md  semantic_versioning.md  troubleshooting.md  wiki_en.md  wiki_ja.md
drone-msgs/: CMakeLists.txt  README.md  package.xml
drone-msgs/.github/workflows/: ci.yml
drone-msgs/drone_msgs/: package.xml
drone-rl/: README.md  README_en.md  __init__.py  drone_sim_env.py  gym_env.py  requirements.txt  ros_interface.py  setup.py  train_ray.py
drone-rl/agents/: README.md
drone-rl/environments/: README.md  base_env.py
drone-rl/sample_agent/: README.md  sample_cartpole_agent.py
drone-rl/tests/: test_gym_api.py
drone-sim-core/: Makefile  README.md  check_package_versions.sh  docker-compose.yml  requirements-docs.txt
drone-sim-core/.github/: dependabot.yml
drone-sim-core/config/: env.template  fastdds_qos.xml  sim_params.yaml
drone-sim-core/docker/: Dockerfile.base  Dockerfile.bridge  Dockerfile.msgs  Dockerfile.web_viz  entrypoint-bridge.sh  entrypoint-manual-control.sh  entrypoint-web-viz.sh
drone-sim-core/docs/: ci_cd.md  param_reference.md
drone-sim-core/manual_control/: package.xml
drone-sim-core/rosdep/: rosdep-bridge.yaml  rosdep-msgs.yaml
drone-sim-core/src/common/: CMakeLists.txt  package.xml  setup.py
drone-sim-core/src/common/common/: __init__.py
drone-sim-core/src/mpc_controller/: package.xml
drone-sim-core/src/px4_msgs/: CMakeLists.txt  package.xml
drone-sim-core/src/safety_layer/: package.xml
drone-sim-core/src/state_bridge/: CMakeLists.txt  package.xml  setup.py
drone-sim-core/src/state_bridge/state_bridge/: __init__.py  state_bridge_node.py
drone-sim-core/tests/: ci-compose.yml  test_gym_env.py  test_rl_longrun.py  test_sample_agents.py  test_simulation_launch.py
drone-sim-core/tools/: gen_param_docs.py  mypy_with_ros.sh  run_local_tests.sh  setup_rosdep_local.sh
drone.github/workflows/: ci.yml
drone_manual_control/: README.md  docker-compose.yml  requirements.txt
drone_manual_control/config/: action_sequences.yaml
drone_manual_control/docker/: Dockerfile.manual_control
drone_manual_control/tests/: ci-compose.yml
drone_msgs/: CMakeLists.txt  package.xml
drone_msgs/msg/: DroneControlCommand.msg
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
integration-tests/: Dockerfile.test  README.md  docker-compose.yml  requirements-test.txt
integration-tests/results/: integration_test_report_20250714_122556.json
integration-tests/scripts/: check_environment.sh  run_tests.sh  setup_integration_env.sh
integration-tests/tests/: run_integration_tests.py  test_integration.py
interfaces/: README.md
interfaces/drone_msgs/: CMakeLists.txt  package.xml
log/: latest_build  latest_list
rosdep/: ament_python.yaml  px4_msgs.yaml  rosdep-bridge.yaml  rosdep-msgs.yaml
scripts/: validate_manual_control.sh
src/: advanced_hyperparameter_tuning.py  distributed_rl_env.py  drone_sim_env.py  gym_env.py  high_performance_training.py  train_agent.py  vector_env_example.py
src/angle_bridge/: package.xml  setup.py
src/angle_bridge/angle_bridge/: main.py
src/command_bridge/: package.xml  setup.py
src/command_bridge/command_bridge/: main.py
src/common/: bridge_base.py  (+3 more)
src/manual_control/: package.xml  requirements.txt  setup.py
src/manual_control/manual_control/: __init__.py  action_executor.py  optimized_simulator.py  simple_simulator.py  state_monitor.py
src/outer_motor_bridge/: outer_motor_bridge.py  package.xml  setup.py
src/outer_motor_bridge/outer_motor_bridge/: main.py
src/state_bridge/: package.xml  setup.py  state_bridge.py
src/state_bridge/state_bridge/: __init__.py  state_bridge.py
tests/: ci-compose.yml  test_basic.py  test_bridge_nodes.py  test_common_utils.py  test_gym_api.py  test_gym_env.py  test_outer_pwm_topic.py  test_rl_longrun.py  test_sample_agents.py  test_simulation_launch.py  test_state_topic.py  test_tilt_topic.py
tools/: check_rosdep_consistency.py  clean_workspace.sh  disk_monitor.sh  gpu_monitor.py  local_ci_test.sh  test_all.sh  validate_dockerfiles.sh
web_viz/: app.py
(+89 files in other folders)
