[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
exclude = [
    "src/sim_launch/launch/.*\\.py$"
]

[project]
dependencies = [
    "pyyaml==6.0.2",
    "types-PyYAML==6.0.0",
    "numpy==2.0.2",
    "gymnasium==1.1.1",
    "lark==1.2.2",
    "ruff==0.4.4",
    "mypy==1.10.0"
] 