<?xml version="1.0"?>
<package format="3">
  <name>drone_msgs_workspace</name>
  <version>1.0.0</version>
  <description>ROS 2 workspace for drone messages</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 