<package format="3">
  <name>mpc_controller</name>
  <version>0.1.0</version>
  <description>MPC controller ROS 2 package</description>
  <maintainer email="hkoizumi1123@gmail.com">Koizumi Hinata</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
</package> 